--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "typescript",
-  "version": "1.0.0",
+  "name": "notes-app",
+  "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "homepage": "https://amadoabaca.github.io/notes-app-ts/",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "lite-server"
   },
   "keywords": [],
-  "author": "",
+  "author": "Amado Abaca",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.2",
+    "lite-server": "^2.6.1",
     "typescript": "^5.4.5"
   }
 }
